[package]
name = "serum-registry"
version = "0.1.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
edition = "2018"

[features]
program = ["solana-client-gen/program", "spl-token/program", "serum-common/program"]
client = ["solana-client-gen/client", "spl-token/default", "serum-common/client"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
spl-token = { version = "=2.0.3", default-features = false }
num_enum = "0.5.0"
thiserror = "1.0.20"
solana-client-gen = { path = "../solana-client-gen" }
serum-common = { path = "../common" }
bytemuck = "1.4.0"